fix (z-index issue)

--- a/styles/func.css
+++ b/styles/func.css
@@ -51,7 +51,7 @@ option:checked{
 
 .close-func{
 	transform: translate(-10%);
-	z-index: -1;
+	z-index: -10;
 	opacity: 0;
 	transition: 0.5s;
 }
