--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,6 @@
 html,
 body{
+	z-index: 1;
 	width: 100%;
 	height: 100%;
 	padding: 0;
